compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAliasCustomJvmPackageName.kt
// IGNORE_BACKEND: ANY
// a.b.c.ActualTypeAliasCustomJvmPackageNameKt
@file:JvmPackageName("a.b.c")
package p

actual typealias B = List<Int>